--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background: black url("parallaxJS/img/Bannière-été.jpg") no-repeat;
+    background: black url("img/Bannière-été.jpg") no-repeat;
     background-size: contain;
 }
 
